[package]
name = "demo-test"
version = "0.1.0"
edition = "2024"
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies.bevy]
# git = "https://github.com/bevyengine/bevy.git"
# branch = "main"
version = "0.15.3"
default-features = true
features = [
    "dynamic_linking",
]

