[package]
name = "demo-test"
version = "0.1.0"
edition = "2024"
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
rev = "12f71a8" 
# tag = "v0.16.0-rc.5"
# branch = "master"
# version = "0.15.3"
default-features = true
features = [
    "dynamic_linking",
]

